# ddk-ffi

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  justfile  setup.sh
.github/workflows/: ddk-ffi.yml  ddk-rn.yml  ddk-ts.yml  feature-parity.yml  publish.yml
ddk-ffi/: Cargo.toml  build.rs  rust-toolchain.toml  scratchpad.txt  uniffi.toml
ddk-ffi/src/: ddk_ffi.udl  lib.rs
ddk-rn/: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DdkRn.podspec  LICENSE  README.md  ddk-rn.podspec  package.json  pnpm-lock.yaml  react-native.config.js  tsconfig.build.json  tsconfig.json  ubrn.config.yaml
ddk-rn/__tests__/: index.test.js
ddk-rn/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
ddk-rn/android/src/main/: AndroidManifest.xml
ddk-rn/android/src/main/java/com/ddkrn/: DdkRnModule.kt  DdkRnPackage.kt
ddk-rn/cpp/: bennyblader-ddk-rn.cpp  bennyblader-ddk-rn.h  bennyhodl-ddk-rn.cpp  bennyhodl-ddk-rn.h  ddk-rn.cpp  ddk-rn.h  ddk_ffi.cpp  ddk_ffi.hpp
ddk-rn/example/: README.md  app.json  metro.config.js  package.json
ddk-rn/example/android/: settings.gradle
ddk-rn/example/android/app/: build.gradle
ddk-rn/example/android/app/src/main/java/ddkrn/example/: MainActivity.kt  MainApplication.kt
ddk-rn/example/android/app/src/main/res/values/: strings.xml
ddk-rn/example/ios/: File.swift  Podfile
ddk-rn/example/ios/DdkRnExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ddk-rn/example/ios/DdkRnExample.xcodeproj/: project.pbxproj
ddk-rn/example/ios/DdkRnExample.xcodeproj/xcshareddata/xcschemes/: DdkRnExample.xcscheme
ddk-rn/example/ios/DdkRnExample.xcworkspace/: contents.xcworkspacedata
ddk-rn/example/ios/DdkRnExampleTests/: DdkRnExampleTests.m
ddk-rn/example/src/: App.tsx
ddk-rn/ios/: DdkRn.h  DdkRn.mm
ddk-rn/ios/DdkRn.xcframework/: Info.plist
ddk-rn/scripts/: apply-hotfix.js  create-binary-archives.js  postinstall.js  prepare-rust-src.js  release.js
ddk-rn/src/: NativeDdkRn.ts  ddk_ffi-ffi.ts  ddk_ffi.ts  index.tsx
ddk-ts/: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  bennyblader-ddk-ts-0.1.5.tgz  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_bigint.js  test_napi_bigint.js  test_sign.js  vitest.config.ts
ddk-ts/.github/workflows/: CI.yml
ddk-ts/__test__/: index.spec.mjs  index.spec.ts
ddk-ts/example/: package.json  tsconfig.json
ddk-ts/example-browser/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
ddk-ts/example-browser/src/: main.ts  vite-env.d.ts
ddk-ts/example/src/: index.ts
ddk-ts/npm/darwin-arm64/: package.json
ddk-ts/npm/darwin-x64/: package.json
ddk-ts/npm/linux-arm64-gnu/: package.json
ddk-ts/npm/linux-arm64-musl/: package.json
ddk-ts/npm/linux-x64-gnu/: package.json
ddk-ts/npm/linux-x64-musl/: package.json
ddk-ts/npm/win32-x64-msvc/: package.json
ddk-ts/scripts/: release.sh  verify-parity.cjs  verify-parity.js  verify-types.cjs
ddk-ts/src/: conversions.rs  lib.rs  types.rs
scripts/: unified-release.js
