[package]
name = "ddk_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "rust-dlc language bindings"
repository = "https://github.com/bennyhodl/ddk-ffi"
homepage = "https://github.com/bennyhodl/ddk-ffi"
readme = "README.md"

[lib]
name = "ddk_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
dlc = { path = "../../../ernest/dlcdevkit/dlc", features = ["use-serde"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[package.metadata.uniffi]
udl_file = "src/ddk_ffi.udl"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
