[package]
name = "ddk_ffi"
version = "0.3.20"
edition = "2021"
license = "MIT"
description = "rust-dlc language bindings"
repository = "https://github.com/bennyhodl/ddk-ffi"
homepage = "https://github.com/bennyhodl/ddk-ffi"
readme = "README.md"

[lib]
name = "ddk_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
# ddk-dlc = { path = "../../../ernest/dlcdevkit/dlc", features = ["use-serde"] }
# ddk-dlc = { git = "https://github.com/bennyhodl/dlcdevkit.git", branch = "master", features = ["use-serde"] }
ddk-dlc = { version = "0.0.21", features = ["use-serde"] }
bitcoin = "0.32.7"
thiserror = "2.0.12"
secp256k1-zkp = "0.11.0"
bip39 = "2.2.0"

[dev-dependencies]
bip39 = {version = "2.2.0", features = ["rand"]}

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[package.metadata.uniffi]
udl_file = "src/ddk_ffi.udl"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
