
[package]
authors = ["benny b <ben@bitcoinbay.foundation>"]
edition = "2021"
name = "ddk_ts"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Import the existing DDK library
ddk_ffi = { path = "../ddk-ffi" }

# NAPI-RS dependencies
napi = { version = "3.0.0", default-features = false, features = ["napi8", "async", "serde-json"] }
napi-derive = "3.0.0"

# Match the same dependencies as ddk-ffi
# dlc = { path = "../../../ernest/dlcdevkit/dlc", features = ["use-serde"] }
dlc = { git = "https://github.com/bennyhodl/dlcdevkit.git", branch = "deterministic-contract-keys", features = ["use-serde"] }
bitcoin = "0.32.7"
thiserror = "2.0.12"
secp256k1-zkp = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
